Simplified BsFormHelper.php Added new input layouts "Default" and "Flat"

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
+# CakePHP specific files #
+##########################
 /vendor/
+
+# Tool specific files #
+#######################
+# Eclipse
+.settings/*
+.buildpath
+.project
+
