Removed resources from PSR-4 path in composer.json

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
-            "MmsdHelpers\\": ["plugins/MmsdHelpers/src/","plugins/MmsdHelpers/resources/"]
+            "MmsdHelpers\\": "plugins/MmsdHelpers/src/"
         }
     },
     "autoload-dev": {
