--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "mmsd-ts/mmsd-helpers",
-    "description": "CakePHP 3.x Helper classes to use with Bootstrap",
+    "description": "CakePHP 3/4 Utility Helper and Component Classes for MMSD",
     "type": "library",
     "require": {
         "php": "^7.1",
